--- a/abstract.tex
+++ b/abstract.tex
@@ -4,19 +4,17 @@
 % Our approach complements the desires of compiler developers, who desire small test cases based on ``plausible'' language constructs.
 % \vspace{2mm}
 
-% OLD ABSTRACT: Compilers should produce correct code for valid inputs, and meaningful errors for invalid inputs. Failure to do so can hinder software development or even cause catastrophic runtime errors. Still, properly testing compilers is hard. Manually assembled test suites cannot cover the enormous range of possible inputs.
-
 %
 % Random program generators come close to it but they require extensive development effort for every language supported by the compiler, and often leave parts of the language space untested. A better way for testing compilers is needed.
 %
 Random program generation --- fuzzing --- is an effective technique for discovering bugs in compilers but successful program generators require extensive development effort for every language supported by the compiler, and often leave parts of the language space untested.
 
 % A novel approach for the rapid development of broad, undirected fuzzers
-We introduce DeepSmith, a novel approach to accelerating compiler validation through the inference of generative models for compiler inputs. Our approach constructs a learned model of the structure of real world code based on a large corpus of open source code. Then, it uses the model to automatically generate tens of thousands of realistic programs. Finally, we apply established differential testing methodologies on them to expose bugs in compilers.
+We introduce DeepSmith, a novel machine learning approach to accelerating compiler validation through the inference of generative models for compiler inputs. Our approach constructs a learned model of the structure of real world code based on a large corpus of open source code. Then, it uses the model to automatically generate tens of thousands of realistic programs. Finally, we apply established differential testing methodologies on them to expose bugs in compilers.
 
 We apply our approach to the OpenCL programming language, automatically exposing bugs in OpenCL compilers with little effort on our side. In 1,000 hours of automated testing of commercial and open source compilers, we discover bugs in all of them, %
 %
-% made up of XX interesting test cases, compared to a similar XX for the state of the art technique given the same time.
+% made up of XX interesting test cases, compared to a similar XX for the state-of-the-art technique given the same time.
 %
 submitting \factcheck{67} bug reports.
 %
