--- a/sec/related_work.tex
+++ b/sec/related_work.tex
@@ -1,7 +1,5 @@
 \section{Related Work}\label{sec:rw}
 
-\cc{TODO: Machine learning for input generation is very recent~\cite{Patra2016,Godefroid2017}. \citeauthor{Godefroid2017}'s work is proof of concept for PDFs. \citeauthor{Patra2016}'s work doesn't find any dynamic bugs. TODO: Deep Learning to Find Bugs~\cite{Pradel2017}.}
-
 \cc{TODO: ASPLOS reviewer suggestions~\cite{Wang2013b,Godefroid2017,Yan2017}.}
 
 \cc{TODO: interesting recent work on Ocaml~\cite{Midtgaard2017}, jsfunfuzz, AFL, libFuzzer.}
@@ -10,13 +8,13 @@ The random generation of test cases is a well established approach to the compil
 
 \paragraph{Program Generation}
 
-In the foundational work on differential testing for compilers, McKeeman \emph{et al.\ }present generators capable of enumerating programs of a range of qualities, from random ASCII sequences to C model conforming programs~\cite{McKeeman1998}. Subsequent works have presented increasingly complex generators which improve on the prior in some metric of interest, generally expressiveness or probability of correctness. CSmith~\cite{Yang2011} is a widely known and effective generator which enumerates programs by pairing infrequently combined language features. In doing so, it produces correct programs with clearly defined behavior but very unlikely functionality, increasing the chances of triggering a bug. Achieving this required extensive engineering work, most of it not portable across languages, and ignoring some language features. Subsequent generators influenced by CSmith, like Orange3~\cite{Nagai2013}, focus on features and bug types beyond the scope of CSmith, arithmetic bugs in the case of Orange3. \cc{+1 more example}
+In the foundational work on differential testing for compilers, McKeeman \emph{et al.\ }present generators capable of enumerating programs of a range of qualities, from random ASCII sequences to C model conforming programs~\cite{McKeeman1998}. Subsequent works have presented increasingly complex generators which improve on the prior in some metric of interest, generally expressiveness or probability of correctness. CSmith~\cite{Yang2011} is a widely known and effective generator which enumerates programs by pairing infrequently combined language features. In doing so, it produces correct programs with clearly defined behavior but very unlikely functionality, increasing the chances of triggering a bug. Achieving this required extensive engineering work, most of it not portable across languages, and ignoring some language features. Subsequent generators influenced by CSmith, like Orange3~\cite{Nagai2013}, focus on features and bug types beyond the scope of CSmith, arithmetic bugs in the case of Orange3. % \cc{+1 more example}
 
 \paragraph{Program Mutation}
 
-Equivalence Modulo Inputs (EMI) testing~\cite{Le2013a,Sun2016a} follows a different approach to test case generation. Starting with existing code, it inserts or deletes statements that will not be executed, so functionality should remain the same. If it is affected, it is due to a compiler bug. While a powerful technique able to find hard to detect bugs, \factcheck{it relies on having a very large number of programs to mutate}. As such, it still \factcheck{requires an external code generator}. Similarly to CSmith, \factcheck{EMI tends to produce very long test programs}. LangFuzz~\cite{Holler2012} also uses mutation but does this by \factcheck{inserting code segments which have previously exposed bugs}. This increases the chances of discovering vulnerabilities in scripting language engines. \cc{TODO: Expand discussion} Skeletal program enumeration~\cite{Zhang2017a} again works by transforming existing code. It identifies algorithmic patterns in short pieces of code and enumerates all the possible permutations of variable usage.
+Equivalence Modulo Inputs (EMI) testing~\cite{Le2013a,Sun2016a} follows a different approach to test case generation. Starting with existing code, it inserts or deletes statements that will not be executed, so functionality should remain the same. If it is affected, it is due to a compiler bug. While a powerful technique able to find hard to detect bugs, \factcheck{it relies on having a very large number of programs to mutate}. As such, it still \factcheck{requires an external code generator}. Similarly to CSmith, \factcheck{EMI favors very long test programs}. LangFuzz~\cite{Holler2012} also uses mutation but does this by \factcheck{inserting code segments which have previously exposed bugs}. This increases the chances of discovering vulnerabilities in scripting language engines. \cc{TODO: Expand discussion} Skeletal program enumeration~\cite{Zhang2017a} again works by transforming existing code. It identifies algorithmic patterns in short pieces of code and enumerates all the possible permutations of variable usage. \cc{TODO: no testing of invalid inputs, unclear if scales to complex programs.}
 
-With both generation and mutation based approaches, bug-exposing programs can be unnecessarily long. While 80\% of the test cases related to GCC and LLVM bugs are 45 lines~\cite{Sun2016} or less, CSmith/EMI output tends to be thousands of lines long. Most this code is not related to the bug and has to be removed for compiler engineers to understand the source of the problem. To that end test case reduction techniques~\cite{Regehr2012a,Pflanzer2016} have been used to bring the code down to manageable lengths. These techniques are very slow, potentially taking several hours to reduce a single test case. Automated reducers also require extensive engineering effort, applying analyses at every stage of the iterative reduction process so as not to obscure the bug-exposing property of interest. Another common problem is prioritizing the most important bugs out of the hundreds or thousands discovered. This \emph{fuzz taming problem} is addressed in~\cite{Chen2013}, in which a distance metric is used to rank test cases such that diverse, interesting test cases are highly ranked. \cc{TODO: Our approach complements EMI}
+With both generation and mutation based approaches, bug-exposing programs can be unnecessarily long. While 80\% of the test cases related to GCC and LLVM bugs are 45 lines~\cite{Sun2016} or less, CSmith/EMI output tends to be thousands of lines long. Most this code is not related to the bug and has to be removed for compiler engineers to understand the source of the problem. To that end test case reduction techniques~\cite{Regehr2012a,Pflanzer2016} have been used to bring the code down to manageable lengths. These techniques are very slow, potentially taking several hours to reduce a single test case. Automated reducers also require extensive engineering effort, applying analyses at every stage of the iterative reduction process so as not to obscure the bug-exposing property of interest. Another common problem is prioritizing the most important bugs out of the hundreds or thousands discovered. This \emph{fuzz taming problem} is addressed in~\cite{Chen2013}, in which a distance metric is used to rank test cases such that diverse, interesting test cases are highly ranked. % \cc{TODO: Our approach complements EMI}
 
 Compared to all these, our fuzzing approach is low cost, easy to develop, portable, capable of detecting a wide range of errors, and focusing by design on bugs that are more likely to be encountered in a production scenario.
 
@@ -68,14 +66,7 @@ Compared to all these, our fuzzing approach is low cost, easy to develop, portab
 %HJL - Removing - \paragraph{GPU Testing} \pp{Do we really need this?} GPU Concurrency --- Small \emph{litmus tests}~\cite{Alglave2015}.
 %GPUVerify~\cite{Bardsley2014}.
 
+\paragraph{Machine Learning} In software testing,
+machine learning has been successfully applied before on areas such as improving bug finding static analyzers~\cite{Heo2017,Koc2017}, repairing programs~\cite{Koukoutos2017a,White}, prioritizing test programs~\cite{Chen2017}, identifying buffer overruns~\cite{Choi2016}, and processing bug reports~\cite{Lam2016,Huo2016}. \cc{TODO: Machine learning for input generation is very recent~\cite{Patra2016,Godefroid2017}. \citeauthor{Godefroid2017}'s work is proof of concept for PDFs. \citeauthor{Patra2016}'s work doesn't find any dynamic bugs. TODO: Deep Learning to Find Bugs~\cite{Pradel2017}.}
 
-\paragraph{Deep Learning}
-Deep Learning is a nascent field that is responsible for a multitude of breakthroughs in modeling rich, hierarchical datasets. The major milestones are reviewed in~\cite{Wang2017}, and methods in~\cite{Schmidhuber2014}. In software testing,
-machine learning has been successfully applied before on areas such as improving bug finding static analyzers~\cite{Heo2017,Koc2017}, repairing programs~\cite{Koukoutos2017a,White}, prioritizing test programs~\cite{Chen2017}, identifying buffer overruns~\cite{Choi2016}, and processing bug reports~\cite{Lam2016,Huo2016}.
-
-There is an increasing interest in mining source code repositories at large scale~\cite{Allamanis2017a}. 
-
-\cc{Using machine learning to inductive program synthesis~\cite{Parisotto2016,Balog2017}.}
-
-Previous studies have involved data mining of GitHub to analyze software engineering practices~\cite{Wu2014,Guzman2014,Baishakhi2014a,Vasilescu2015}, for example code generation~\cite{Zhang2015a}, code summarization~\cite{Allamanis2016}, comment generation~\cite{Wong2013}, and code completion~\cite{Raychev2014}. \cc{Creating compilable code snippets mined from StackOverflow~\cite{Terragni2016}}. Previous applications of deep learning to compilers have involved program synthesis for performance benchmarking~\cite{Cummins2017a} and building optimization heuristics~\cite{Cummins2017b}. \cc{Revise claim in light of: Prior approaches to compiler input generation have shown proof-of-concept~\cite{Patra2016,Godefroid2017}, but we are the first to find dozens of errors in commercial and open source compilers?}
-% No work so far has exploited mined source code for test case generation. Ours is the first to do so~\cc{TODO: revise claim in light of TreeFuzz, Learn\&Fuzz, etc.}.
+Deep Learning is a nascent field that is responsible for a multitude of breakthroughs in modeling rich, hierarchical datasets. The major milestones are reviewed in~\cite{Wang2017}, and methods in~\cite{Schmidhuber2014}. There is an increasing interest in mining source code repositories at large scale~\cite{Allamanis2017a}.  \cc{Using machine learning to inductive program synthesis~\cite{Parisotto2016,Balog2017}.} Previous studies have involved data mining of GitHub to analyze software engineering practices~\cite{Wu2014,Guzman2014,Baishakhi2014a,Vasilescu2015}, for example code generation~\cite{Zhang2015a}, code summarization~\cite{Allamanis2016}, comment generation~\cite{Wong2013}, and code completion~\cite{Raychev2014}. \cc{Creating compilable code snippets mined from StackOverflow~\cite{Terragni2016}}. Previous applications of deep learning to compilers have involved program synthesis for performance benchmarking~\cite{Cummins2017a}. \cc{TODO: Revise claim in light of TreeFuzz, Learn\&Fuzz: Prior approaches to compiler input generation have shown proof-of-concept~\cite{Patra2016,Godefroid2017}, but we are the first to find dozens of errors in commercial and open source compilers?}
